# FDisk

./: BUGS.md  CMakeLists.txt  README.md  fdisk.ini  fdisk.lng  fdisk.rc  main.c
doc/: PK8000.md  USAGE.md
source/: ansicon.c  ansicon.h  cmd.c  cmd.h  compat.c  compat.h  deflang.c  display.c  display.h  environ.c  environ.h  fdiskio.c  fdiskio.h  helpscr.c  helpscr.h  kbdinput.c  kbdinput.h  logger.c  logger.h  main.h  pcompute.c  pcompute.h  pdiskio.c  pdiskio.h  printf.c  printf.h  ui.c  ui.h
source/codepage/: codepage.c  codepage.h
source/svarlang/: auto_exe.c  auto_nls.c  svarlang.c  svarlang.h  version.c
source/svarlang/make/: CMakeLists.txt  tlumacz.c
source/svarlang/utf8tocp/: CMakeLists.txt  history.txt  utf8tocp.c
tools/: clear.bat  makelng.bat
tools/nls/: de_utf8.txt  en_utf8.txt  es_utf8.txt  fr_utf8.txt  it_utf8.txt  pl_utf8.txt  ru_utf8.txt  tr_utf8.txt
